--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black_50">#80000000</color>
+    <color name="grey_75">#4C4C4C</color>
+    <color name="gold">#FF9341</color>
 </resources>
