--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,53 +4,50 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:id="@+id/login_activity">
+    android:id="@+id/register_activity">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_launcher_round"
-        android:id="@+id/l_icon"/>
+        android:id="@+id/r_icon"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:id="@+id/l_login_text"
+        android:id="@+id/r_login_text"
         android:textSize="50sp"
         android:layout_marginBottom="50dp"/>
 
 
-
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="login"
+        android:paddingRight="100dp"
+        android:paddingLeft="100dp"
+        android:id="@+id/r_login" />
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="e-mail"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
-        android:id="@+id/l_email" />
+        android:id="@+id/r_email" />
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
-        android:id="@+id/l_password"
+        android:id="@+id/r_password"
         android:hint="password"/>
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
+        android:text="@string/register"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
         android:id="@+id/l_login_button"/>
 
-    <Button
-        android:id="@+id/l_register_button"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:paddingLeft="75dp"
-        android:paddingRight="75dp"
-        android:text="@string/register"
-        android:textSize="10dp" />
 </LinearLayout>
