Mise en place de l'interface de login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,14 +28,16 @@
         android:hint="e-mail"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
-        android:id="@+id/l_email" />
+        android:id="@+id/l_email"
+        android:inputType="textEmailAddress"/>
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
         android:id="@+id/l_password"
-        android:hint="password"/>
+        android:hint="password"
+        android:inputType="textPassword"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -43,7 +45,8 @@
         android:text="@string/login"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
-        android:id="@+id/l_login_button"/>
+        android:id="@+id/l_login_button"
+        android:onClick="clickOnLogin"/>
 
     <Button
         android:id="@+id/l_register_button"
@@ -52,5 +55,6 @@
         android:paddingLeft="75dp"
         android:paddingRight="75dp"
         android:text="@string/register"
-        android:textSize="10dp" />
+        android:textSize="10dp"
+        android:onClick="clickOnRegister"/>
 </LinearLayout>
