--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="e-mail"
+        android:hint="@string/email"
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
         android:id="@+id/r_email"
@@ -42,7 +42,7 @@
         android:paddingRight="100dp"
         android:paddingLeft="100dp"
         android:id="@+id/r_password"
-        android:hint="password"
+        android:hint="@string/password"
         android:inputType="textPassword"/>
     <Button
         android:layout_width="wrap_content"
