--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,4 +58,15 @@
         android:text="@string/register"
         android:textSize="10dp"
         android:onClick="clickOnRegister"/>
+
+    <Button
+        android:id="@+id/l_forget_password_button"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:paddingLeft="75dp"
+        android:paddingRight="75dp"
+        android:text="@string/forgot_your_password"
+        android:textSize="10dp"
+        android:onClick="clickOnForgotPassword"/>
+
 </LinearLayout>
