--- a/app/src/main/res/layout/bubble_message.xml
+++ b/app/src/main/res/layout/bubble_message.xml
@@ -2,13 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:id="@+id/mg_linear"
-    android:gravity="start">
+    android:id="@+id/mg_linear">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/bm_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,13 +17,14 @@
         android:paddingEnd="8dp"
         android:paddingBottom="4dp"
         android:text="janv 1970"
-        android:textColor="#C0C0C0" />
+        android:textColor="#C0C0C0" />-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mg_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp">
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="5dp">
 
 
         <TextView
