--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="grey_75">#4C4C4C</color>
     <color name="gold">#FF9341</color>
     <color name="green">#3F9243</color>
+    <color name="grey">#f2f2f2</color>
 </resources>
