--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -14,17 +14,29 @@
         android:id="@+id/s_linear_contact_userbar"
         android:gravity="center"
         android:padding="10dp">
+        <FrameLayout
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/s_user_bg">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_round"
-            android:id="@+id/s_img_icon_user"/>
+            <TextView
+                android:id="@+id/s_user_letter_contact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="🐟"
+                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+                android:textSize="30dp"
+                android:textColor="@color/white"
+                android:layout_gravity="center"/>
+        </FrameLayout>
+
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="🐟🐟🐟🐟🐟🐟🐟🐟🐟🐟"
             android:id="@+id/s_text_user"
+            android:textSize="18dp"
             android:padding="5dp" />
 
     </LinearLayout>
