--- a/app/src/main/res/layout/contact_fragment.xml
+++ b/app/src/main/res/layout/contact_fragment.xml
@@ -8,16 +8,10 @@
     android:gravity="center"
     android:id="@+id/c_fragment">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="50dp"
-        android:elevation="0dp">
-        <ImageView
-            android:id="@+id/c_user_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@mipmap/ic_launcher_round" />
+    <FrameLayout
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/c_user_bg">
 
         <TextView
             android:id="@+id/c_user_letter_frag"
@@ -28,7 +22,7 @@
             android:textSize="25dp"
             android:textColor="@color/white"
             android:layout_gravity="center"/>
-    </androidx.cardview.widget.CardView>
+    </FrameLayout>
 
 
     <TextView
