--- a/app/src/main/res/layout/activity_messages.xml
+++ b/app/src/main/res/layout/activity_messages.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,40 +9,50 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/m_recycle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
 
-    <RelativeLayout
+
+    <LinearLayout
         android:id="@+id/layout_gchat_chatbox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/m_button_location"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="?attr/selectableItemBackground"
+            android:onClick="onGetLocation"
+            android:src="@drawable/ic_baseline_location_on_24"
+            android:layout_weight="1"
+            android:textColor="@color/purple_500" />
 
         <EditText
             android:id="@+id/m_enter_message"
-            android:layout_width="253dp"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
             android:background="@android:color/transparent"
             android:hint="@string/enter_message"
             android:inputType="text"
+            android:layout_weight="200"
             android:maxLines="5" />
 
         <Button
             android:id="@+id/m_button_send"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_alignParentEnd="true"
             android:background="?attr/selectableItemBackground"
-            android:textSize="18sp"
+            android:onClick="onSendMessage"
             android:text="@string/send"
             android:textColor="@color/purple_500"
-            android:onClick="onSendMessage"/>
+            android:layout_weight="1"
+            android:textSize="18sp" />
+    </LinearLayout>
 
-    </RelativeLayout>
 
 
 </LinearLayout>
