--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:id="@+id/s_linear_settings"
-    android:background="@color/grey">
+    style="@style/Theme.CryptUrMess.forLinearLayout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,7 +79,8 @@
                 android:id="@+id/s_logout"
                 android:text="@string/logout"
                 android:layout_marginBottom="15dp"
-                android:onClick="logout"/>
+                android:onClick="logout"
+                android:textColor="@color/white"/>
 
 
 
