--- a/app/src/main/res/layout/bubble_message.xml
+++ b/app/src/main/res/layout/bubble_message.xml
@@ -19,11 +19,10 @@
         android:text="janv 1970"
         android:textColor="#C0C0C0" />-->
 
-    <androidx.cardview.widget.CardView
+    <FrameLayout
         android:id="@+id/mg_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp"
         android:layout_marginTop="5dp">
 
 
@@ -43,7 +42,7 @@
             />
 
 
-</androidx.cardview.widget.CardView>
+</FrameLayout>
     <TextView
         android:id="@+id/mg_time"
         android:layout_width="wrap_content"
