--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,9 @@
     <color name="grey_200">#DCDCDC</color>
     <color name="grey_75">#4C4C4C</color>
     <color name="gold">#FF9341</color>
-    <color name="green">#3F9243</color>
     <color name="grey">#f2f2f2</color>
+
+    <color name="green">#23AC2A</color>
+    <color name="dark_green">#1C8822</color>
+    <color name="green_light">#91FA96</color>
 </resources>
