--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,20 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.CryptUrMess" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/green_light</item>
+        <item name="colorPrimaryVariant">@color/green</item>
+        <item name="colorOnPrimary">@color/grey_200</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <!--<item name = "android:windowActionBar">false</item>
-        <item name = "android:windowNoTitle">true</item>-->
+        <item name="android:navigationBarColor">?attr/colorOnPrimary</item>
     </style>
-    <style name = "NoActionBar" parent = "Theme.CryptUrMess">
-
+    <style name="Theme.CryptUrMess.forLinearLayout" parent="Theme.CryptUrMess">
+        <item name="android:background">?attr/colorOnPrimary</item>
     </style>
 </resources>
