--- a/app/src/main/res/layout/contact_fragment.xml
+++ b/app/src/main/res/layout/contact_fragment.xml
@@ -19,7 +19,7 @@
             android:id="@+id/c_user_letter_frag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="🐟"
+            android:text=""
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
             android:textSize="25dp"
             android:textColor="@color/white"
@@ -27,10 +27,23 @@
     </FrameLayout>
 
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="🐟🐟🐟🐟🐟🐟🐟🐟"
-        android:id="@+id/c_user_name"/>
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:text=""
+            android:id="@+id/c_user_name"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:text=""
+            android:id="@+id/c_last_msg"/>
+    </LinearLayout>
+
 </LinearLayout>
