--- a/app/src/main/res/menu/contact_menu.xml
+++ b/app/src/main/res/menu/contact_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_c_contact_rename"
+        android:title="@string/rename_contact" />
+    <item
         android:id="@+id/menu_c_contact_delete"
         android:title="@string/delete_contact" />
 </menu>
