--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black_50">#80000000</color>
-    <color name="grey_200">#DCDCDC</color>
+    <color name="grey_200">#F1F1F1</color>
     <color name="grey_75">#4C4C4C</color>
     <color name="gold">#FF9341</color>
-    <color name="grey">#f2f2f2</color>
+    <color name="grey">#A6A6A6</color>
 
     <color name="green">#23AC2A</color>
     <color name="dark_green">#1C8822</color>
-    <color name="green_light">#91FA96</color>
+    <color name="green_light">#6CC570</color>
 </resources>
