--- a/app/src/main/res/layout/bubble_message.xml
+++ b/app/src/main/res/layout/bubble_message.xml
@@ -32,27 +32,40 @@
             android:layout_height="wrap_content"
 
             android:maxWidth="260dp"
+            android:paddingLeft="10dp"
             android:paddingTop="5dp"
             android:paddingRight="10dp"
-            android:paddingLeft="10dp"
             android:paddingBottom="5dp"
             android:text="@string/unknown"
             android:textColor="@color/white"
-            android:textSize="16sp"
-            />
+            android:textSize="16sp" />
 
 
-</FrameLayout>
-    <TextView
-        android:id="@+id/mg_time"
+    </FrameLayout>
+        <TextView
+            android:id="@+id/mg_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00"
+            android:textColor="#C0C0C0"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/card_gchat_message_me"
+            app:layout_constraintEnd_toStartOf="@+id/card_gchat_message_me"
+            tools:ignore="SmallSp" />
+
+
+    <Button
+        android:id="@+id/buttonOpenInMaps"
+        style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00:00"
-        android:textColor="#C0C0C0"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/card_gchat_message_me"
-        app:layout_constraintEnd_toStartOf="@+id/card_gchat_message_me"
-        tools:ignore="SmallSp" />
+        android:onClick="openInMaps"
+        android:paddingVertical="0dp"
+        android:paddingTop="0dp"
+        android:paddingBottom="0dp"
+        android:textColorLink="#03A9F4"
+        android:visibility="visible"
+        tools:text="Open in Maps" />
 
 
 </LinearLayout>
